Fixing IE collapsing of the balloons

--- a/index.css
+++ b/index.css
@@ -52,3 +52,7 @@
   text-align: right;
   background: var(--color-berlin);
 }
+
+.navigation__primary-inner .balloon {
+  position: static;
+}
